Login. Salvando usuario no banco. Setando remetente. Notificação básica

--- a/BugsBunny/app/src/main/res/layout/activity_contacts.xml
+++ b/BugsBunny/app/src/main/res/layout/activity_contacts.xml
@@ -9,13 +9,14 @@
     android:orientation="vertical"
     tools:context=".Activities.Contacts">
 
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/contact_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/main_color_green"
