--- a/BugsBunny/app/src/main/res/values/colors.xml
+++ b/BugsBunny/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00b863</color>
+    <color name="colorPrimaryDark">#00b863</color>
+    <color name="colorAccent">#00b863</color>
+
+
 
     <color name="white_smoke">#F7F7F7</color>
     <color name="white">#ffffff</color>
